# ridi-apps

./: .env.example  .eslintrc.cjs  .gitguardian.yaml  .gitmodules  .npmrc  .prettierignore  cspell.json  db.sh  dev-all.sh  dev.sh  devbox.json  docker-compose.local.yml  eslint.config.mjs  husky.sh  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust_postgres.go.tmpl  sqlc.yaml  tsconfig.lib.json
.github/workflows/: deploy-full-stack.yaml  deploy.yaml  generate-types.yaml  prod.yaml
.husky/: pre-commit
apps/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/astro-app/: .env.example  astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json  worker-configuration.d.ts  wrangler.toml
apps/axum-app/: Cargo.toml  Dockerfile
apps/deno-app/: .env.example  Dockerfile  docker-compose.yaml  main.ts  startup.sh
apps/expo-app/: .env.example  .gitignore  app.json  babel.config.js  eslint.config.mjs  index.tsx  metro.config.js  package.json  tailwind.config.js  tsconfig.json  wrangler.toml
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  all-regions.json  auth  config.ts  constants.ts  index.ts  package.json  tsconfig.json  types.ts  util.ts  vector.yaml
prisma/: schema.prisma
scripts/: dev.ts  mobile-set-api-url-env.ts  router-url-env.ts
services/geo-boundary-init/: .env.base  .env.estonia  .env.greece  .env.latvia  Cargo.toml  dev.sh
services/geo-boundary-init/src/: env.rs  geo_boundaries.rs  main.rs  pbf_reader.rs
services/geo-boundary-init/src/db/: queries.rs  queries.sql
supabase/: config.toml  seed.sql  sqlc.yaml
(+631 files in other folders)
