[package]
name = "geo-boundary-init"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 3

[dependencies]
geo = "0.30.0"
geo-types = "0.7.16"
osmpbfreader = "0.19.0"
postgres = "0.19.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
wkt = "0.12.0"
